--- a/dash/app/src/main/AndroidManifest.xml
+++ b/dash/app/src/main/AndroidManifest.xml
@@ -62,18 +62,17 @@
 
         </activity>
 
-        <activity android:name=".GameActivity"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation">
-
-        </activity>
-
         <activity android:name=".TutorialActivity"
             android:screenOrientation="landscape"
             android:configChanges="keyboardHidden|orientation">
 
         </activity>
 
+        <activity android:name=".tmpPatternActivity"
+            android:screenOrientation="landscape"
+            android:configChanges="keyboardHidden|orientation">
+
+        </activity>
 
     </application>
 
