--- a/dash/app/src/main/AndroidManifest.xml
+++ b/dash/app/src/main/AndroidManifest.xml
@@ -74,6 +74,12 @@
 
         </activity>
 
+        <activity android:name=".PatternActivity"
+            android:screenOrientation="landscape"
+            android:configChanges="keyboardHidden|orientation">
+
+        </activity>
+
     </application>
 
 </manifest>
