--- a/dash/app/src/main/AndroidManifest.xml
+++ b/dash/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         android:normalScreens="true"
         android:largeScreens="true"
         android:anyDensity="true" />
-
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_dash"
         android:label="@string/app_name"
